--- a/.env
+++ b/.env
@@ -1,24 +1,25 @@
 # Bot
-BOT_TOKEN = '6208348875:AAEFxqAwZlC5hq3LozUo_soBGmbQ2XaZGh4'
-chat_id = 436644865
+BOT_TOKEN = ''
+chat_id = ''
 
 # bd
-DB_NAME = 'tracking'
-PG_USER = 'tracking'
-PASSWORD = '2020327'
-HOST = 'localhost'
+DB_NAME = ''
+PG_USER = ''
+PASSWORD = ''
+HOST = ''
 PORT = '5432'
 
-ip = 'localhost'
+# django setings
+DEBUG =
+SECRET_KEY = ''
+DJANGO_ALLOWED_HOSTS = []
 
-DEBUG = 1
-SECRET_KEY = 'django-insecure-f0@1vfl@dmcj2eejka+8su$4a+0^7z_(x+@#pjcy@2g^hrs&i-'
-DJANGO_ALLOWED_HOSTS = ['localhost', '127.0.0.1', '0.0.0.0']
+# superuser django
+DJANGO_SUPERUSER_USERNAME=
+DJANGO_SUPERUSER_PASSWORD=
+DJANGO_SUPERUSER_EMAIL=
 
-DJANGO_SUPERUSER_USERNAME=admin
-DJANGO_SUPERUSER_PASSWORD=admin
-DJANGO_SUPERUSER_EMAIL=talkatel2014@gmail.com
-
-POSTGRES_DB=tracking
-POSTGRES_USER=tracking
-POSTGRES_PASSWORD=2020327
+# bd docker
+POSTGRES_DB=
+POSTGRES_USER=
+POSTGRES_PASSWORD=
